# olivos-cli

./: .gitmodules  README.md  main.py  pyproject.toml
src/olivos_cli/: __init__.py  __main__.py
src/olivos_cli/cli/: __init__.py  main.py
src/olivos_cli/cli/commands/: __init__.py  account.py  adapter.py  config.py  git.py  init.py  logs.py  package.py  run.py  service.py  status.py  update.py
src/olivos_cli/core/: __init__.py  adapters.py  config.py  const.py  exceptions.py  logger.py  validation.py
src/olivos_cli/git/: __init__.py
src/olivos_cli/models/: __init__.py
src/olivos_cli/olivos/: __init__.py  account_api.py
src/olivos_cli/package/: __init__.py  base.py  pdm.py  pip.py  uv.py
src/olivos_cli/systemd/: __init__.py  service.py  template.py
src/olivos_cli/utils/: __init__.py  prompt.py  requirements.py  validation.py
templates/: systemd.service.jinja2
