[project]
name = "olivos-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pip>=25.3",
    "rich>=14.2.0",
    "textual>=6.6.0",
]

[project.scripts]
olivos_cli = "olivos_cli.__main__:main" 
olivoscli = "olivos_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/olivos_cli"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
