[project]
name = "olivos-cli"
version = "0.4.1"
description = "OlivOS CLI/TUI 工具 - 用于构建、部署和管理 OlivOS 应用"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=14.2.0",
    "textual>=6.6.0",
    "jinja2>=3.0.0",
    "tomli>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
olivos-cli = "olivos_cli.__main__:main"
olivoscli = "olivos_cli.__main__:main"

[build-system]
requires = ["hatchling", "pdm-backend"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/olivos_cli/**",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

# =============================================================================
# PDM 配置
# =============================================================================

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pdm>=2.0.0",
]

[tool.pdm.build]
includes = ["src/olivos_cli"]
# PDM 会使用 src 布局
source-includes = ["tests"]

# =============================================================================
# 代码质量工具配置
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["olivos_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
